fix a key error, fix margin being too big, add empty text for tasks chart

--- a/src/Components/TaskList/style.scss
+++ b/src/Components/TaskList/style.scss
@@ -1,5 +1,5 @@
 .task-list {
-  margin: 2rem;
+  margin: 1.5rem 0;
   min-height: 150px;
   .ant-card-body {
     padding: 0rem;
