--- a/src/Components/TasksChart/style.scss
+++ b/src/Components/TasksChart/style.scss
@@ -11,6 +11,7 @@
   .tasks-chart-title {
     font-size: 1.1rem;
     font-weight: bold;
+    margin-bottom: 1rem;
   }
   .tasks-chart {
     width: 220px;
@@ -67,5 +68,17 @@
         }
       }
     }
+  }
+}
+
+.tasks-chart-empty {
+  height: 400px;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  @media only screen and (max-width: 768px) {
+    display: none;
   }
 }
